@@ -2017,6 +2017,10 @@ MPG123_EXPORT int mpg123_replace_reader( mpg123_handle *mh
 ,	off_t (*r_lseek)(int, off_t, int)
 );
 
+/* TODO: Implement replace_read_handle() as thin wrapper over mpg123_reader(),
+   triggering the same further code paths, include mpg123_open_handle().
+   And: Implement the below functions, MPG123_PORTABLE_API, at all. */
+
 /** Replace I/O functions with your own ones operating on some kind of
  *  handle instead of integer descriptors.
  *  The handle is a void pointer, so you can pass any data you want...
@@ -2034,6 +2038,28 @@ MPG123_EXPORT int mpg123_replace_reader( mpg123_handle *mh
 MPG123_EXPORT int mpg123_replace_reader_handle( mpg123_handle *mh
 ,	mpg123_ssize_t (*r_read) (void *, void *, size_t)
 ,	off_t (*r_lseek)(void *, off_t, int)
+,	void (*cleanup)(void*) );
+
+/** Set up portable read functions on an opaque handle.
+ *  The handle is a void pointer, so you can pass any data you want...
+ *  mpg123_open_handle() is the call you make to use the I/O defined here.
+ *  There is no fallback to internal read/seek here.
+ *  Note: As it would be troublesome to mess with this while having a file open,
+ *  this mpg123_close() is implied here.
+ *  \param mh handle
+ *  \param r_read callback for reading
+ *     The parameters are the handle, the buffer to read into, a byte count to read,
+ *     address to store the returned byte count. Return value is zero for
+ *     no issue, non-zero for some error. Recoverable signal handling has to happen
+ *     inside the callback.
+ *  \param r_lseek callback for seeking (like POSIX lseek)
+ *  \param cleanup A callback to clean up an I/O handle on mpg123_close,
+ *         can be NULL for none (you take care of cleaning your handles).
+ * \return MPG123_OK on success
+ */
+MPG123_EXPORT int mpg123_reader64( mpg123_handle *mh
+,	int (*r_read) (void *, void *, size_t, size_t *)
+,	int64_t (*r_lseek)(void *, int64_t, int)
 ,	void (*cleanup)(void*) );
 
 /** @} */
