@@ -1,3 +1,6 @@
+TODO: Fix -R with buffer … that behaves badly, pausing and draining at unexpected
+moments if interacting with commands near the end of track.
+
 1.32.0
 ------
 - build:
@@ -10,6 +13,7 @@
 -- Added --libversion.
 -- Added proper A-B looping with terminal control key 'o', renamed
    --pauseloop to --presetloop.
+-- Really get rid of mpg123_position() usage. (It was all lies before!)
 - libmpg123, libout123, libsyn123: bumped API version for version query
   functions
 - libout123:
